tests/snapshots/run__non_exhaustive_enum_allow.snap
---
source: tests/run.rs
assertion_line: 16
expression: "run(\"tests/non_exhaustive/\", \"enum_allow\")"
---
Output {
    status: ExitStatus(
        unix_wait_status(
            0,
        ),
    ),
    stdout: "",
    stderr: "",
}
