tests/snapshots/run__non_exhaustive_enum_fixed.snap
---
source: tests/run.rs
expression: "run(\"tests/non_exhaustive/\", \"enum_fixed\")"
---
Output {
    status: ExitStatus(
        unix_wait_status(
            0,
        ),
    ),
    stdout: "",
    stderr: "",
}
