tests/snapshots/run__non_exhaustive_enum_warn.snap
---
source: tests/run.rs
expression: "run(\"tests/non_exhaustive/\", \"exhaustive-enum\", \"enum_warn\")"
---
Output {
    status: ExitStatus(
        unix_wait_status(
            0,
        ),
    ),
    stdout: "",
    stderr: "",
}
